# machine-history/src/main/java/com/redhat/demo/api/Machines.java
@@ -1,6 +1,7 @@
 package com.redhat.demo.api;
 
 import com.redhat.demo.api.beans.Machine;
+import com.redhat.demo.api.beans.MachineState;
 import java.util.List;
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -14,4 +15,9 @@ public interface Machines {
   @GET
   @Produces("application/json")
   List<Machine> getAllMachines();
+
+  @Path("/{id}")
+  @GET
+  @Produces("application/json")
+  MachineState getMachine();
 }
